[project]
name = "archiaback-1"
version = "0.1.0"
description = ""
authors = [
    {name = "MrRobot138",email = "jp.castrob1@uniandes.edu.co"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.128.3,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.3,<4.0.0)",
    "langchain-google-vertexai (>=3.2.2,<4.0.0)",
    "langchain-core (>=1.2.9,<2.0.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "google-cloud-aiplatform (>=1.136.0,<2.0.0)",
    "google-cloud-storage (>=3.9.0,<4.0.0)",
    "google-cloud-dialogflow-cx (>=2.3.0,<3.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "ipython (>=9.10.0,<10.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "unstructured (>=0.18.31,<0.19.0)",
    "chromadb (>=1.4.1,<2.0.0)",
    "langgraph-checkpoint-postgres (>=3.0.4,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "pypdf (>=6.6.2,<7.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
